--- a/about.html
+++ b/about.html
@@ -42,26 +42,16 @@
                 <p>The different pollutants (particulate matter, ozone, carbon monoxide, sulphur dioxide and nitrogen dioxide) are represented as dots, each accompanied by explanations about their sources and associated health concerns.</p>
                 <p>Pollution Pulse is a platform for environmental education and advocacy. We encourage users to delve deeper into the issue of climate change and explore the environmental impacts of everyday choices.</p>
             </div>
-            
-            <div>
-                <h2 class="about_title">Acknowledgements</h2>
-                <ol class="about_text">
-                    <li>Air Quality data provided by <a class="inline_link" href="https://open-meteo.com/">Open-Meteo</a></li>
-                    <li>Geocoding API by <a class="inline_link" href="https://locationiq.com/">Location IQ </a></li>
-                    <li>Air pollutant information from <a class="inline_link" href="https://www.epa.vic.gov.au/">EPA Victoria</a></li>
-                    <li>Special thanks to <a class="inline_link" href="https://github.com/mfehrenbach">Michael Fehrenbach</a> & <a  class="inline_link" href="https://github.com/eli8527">
-                        Eric Li</a> for their professional insights and teachings throughout the project.</li>
-                </ol>
-            </div>
-            </main>
-            <footer>
+        </main>
+        <footer>
                 <div>
                     <p><img class="logo" src="assets/logo_w.svg">Pollution Pulse</p>
                     <p>Developed by JC Clark</p>
                 </div>
                 <div>
-                    <p>April 2024</p>
+                    <p>May 2024</p>
                 </div>
+        </footer>
         <script src="js/about.js"></script>
     </body>
 </html>
