--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 				<li>
 					<a class="logo_placement btn active" href="index.html"><img class="logo" src="assets/logo.svg"><p>Pollution Pulse</p></a>
 				</li>
+				<li class="search_box">
+					<input type="text" id="search" placeholder="Search City...">
+					<img class="line_icon" src="assets/icons/exit.svg">
+				</li>
 				<li>
 					<a class="btn" href="about.html">About</a>
 				</li>
