--- a/index.html
+++ b/index.html
@@ -38,8 +38,14 @@
 				<p>This site uses your location, make sure it has been allowed.</p>
 				<h3>...DATA LOADING...</h3>
 			</div>
-			<h1 class="timezone_header">Today in<br><span id="locationId"></span></h1>
-			<button id="save_btn">Save</button>
+			<div>
+				<h1 class="timezone_header">Today in<br><span id="locationId"></span></h1>
+			</div>
+			<div class="time">
+				<p id="localTime">Time</p>
+				<img id="timeIcon" class="line_icon">
+			</div>
+			
 		</header>
 		<main>
 			<div class="pollutant_view">
