--- a/index.html
+++ b/index.html
@@ -175,8 +175,9 @@
 					<div class="location_control add_blur">
 						<button id="loc_btn" class="sub_btn control_btn_active"><img src="assets/icons/location point.svg" class="line_icon" alt="Location Icon"></button>
 						<div class="search_box">
+							<img class="line_icon" src="assets/icons/search.svg">
 							<input type="text" id="search" placeholder="Search City...">
-							<img class="line_icon" src="assets/icons/exit.svg">
+
 						</div>
 						<!-- <button id="nxt_btn" class="sub_btn">Next</button> -->
 					</div>
