--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Pollution Pulse</title>
 		<meta name="description" content="Air pollution data visualization">
 		<meta name="author" content="JC Clark">
-		<meta content="https://typography-interaction-2324.github.io/assets/meta/link-meta.png" property="og:image">
+		<meta content="assets/hero_pollution.png" property="og:image">
 		<meta content="Pollution Pulse site image." property="og:image:alt">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
