--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<meta name="viewport" content="width=device-width">
 
 		<title>Pollution Pulse</title>
-		<meta name="description" content="Air pollution data visualization">
+		<meta name="description" content="Air pollution data visualization.">
 		<meta name="author" content="JC Clark">
-		<meta content="assets/hero_pollution.png" property="og:image">
+		<meta content="assets/hero_small_pollution.png" property="og:image">
 		<meta content="Pollution Pulse site image." property="og:image:alt">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
