--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<h3>AIR QUALITY</h3>
 				</div>
 				<div>
-					<p>This site uses your location, please make sure it has been allowed.</p>
+					<p>This site uses your location.<br>Please make sure it has been allowed.</p>
 				</div>
 			</div>
 		</aside> 
